--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Countdown Timer</title>
 </head>
 <body>
-    <h1>Making Bags</h1>
+    <h1>Tech Sales Job</h1>
 
     <div class="countdown-container">
         <div class="countdown-el days-c">
