--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="counter.css">
-    <title>Countdown Timer</title>
+    <title>Countdown Timer App</title>
 </head>
 <body>
     <h1>Tech Sales Job</h1>
